Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34168

Extend perror utility to print link to knowledge page

    XMLWordPrintable

Details

    Description

      All server errors now have a dedicated web page, like: https://mariadb.com/kb/en/e1158/
      The task is to extend perror to also print a link to the error in the kb.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              monty Michael Widenius
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0.75d
                  0.75d
                  Remaining:
                  0d
                  Logged:
                  Time Not Required
                  Not Specified

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.