extra/perror.c
@@ -359,7 +359,8 @@ int main(int argc,char *argv[])
       {
         found= 1;
         if (verbose)
-          printf("MariaDB error code %3d (%s): %s\n", code, name, msg);
+          printf("MariaDB error code %3d (%s): %s\n"
+                 "Learn more: https://mariadb.com/kb/en/e%3d/\n", code, name, msg, code);
         else
           puts(msg);
       }
